attempt to fix scrollbar background and google url

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -75,7 +75,8 @@ h6 {
 
 ::-webkit-scrollbar {
   width: 10px;
-  height: 6px;
+  height: 5px;
+  background-color: #000000;
 }
 
 ::-webkit-scrollbar-thumb {
